<resources>
    <string name="app_name">Recipher</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="aboutTitle">About</string>
    <string name="favouritesTitle">Favourites</string>
    <string name="recipeDetailsTitle">Recipe Details</string>
    <string name="recipesTitle">Recipes</string>
    <string name="aboutYear">2018 ©</string>
    <string name="aboutAllrights">All rigths reserved.</string>
    <string name="aboutVersion">Application version v1.0</string>
    <string name="noData">No recipes found.</string>
    <string name="socialScore">Social rank:</string>
    <string name="AddToFavourites">Add to favourites</string>
    <string name="encryptionTitle">Protect with password</string>
    <string name="encryptionText">If you want to protect this recipe with a password, write below. If no, then just leave it empty.</string>
    <string name="save">Save</string>
    <string name="exit">Cancel</string>
    <string name="RemoveFromFavourites">Remove from favourites</string>
    <string name="SaveChanges">Save Changes</string>
    <string name="descriptionHint">No description is available. Fill it, then add the recipe to your favourites to keep the changes!</string>
    <string name="recipeSearchHint">Search recipes...</string>
    <string name="favoruiteSearchHint">Search favourite recipes...</string>
    <string name="passwordHint">Password...</string>
    <string name="unlock">Unlock</string>
    <string name="passwordInformation">This recipe is password protected, to see its details, enter the password below.</string>
    <string name="valiationFailedTitle">Looks like something is not okay..</string>
    <string name="LockWithPassword">Add password protection</string>
</resources>
