<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <ImageView
        android:id="@+id/recipherImage"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_above="@id/passwordInformationTextView"
        android:padding="20dp"
        android:src="@drawable/about_image"/>

    <TextView
        android:id="@+id/passwordInformationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/passwordEditText"
        android:text="@string/passwordInformation"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:inputType="textPassword"
        android:hint="@string/passwordHint"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordEditText"
        style="?android:attr/buttonBarStyle"
        android:orientation="horizontal">

        <Button
            android:id="@+id/exitButton"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/exit"/>

        <Button
            android:id="@+id/unlockButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/unlock"/>

    </LinearLayout>



</RelativeLayout>


