<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/layout_recipe_details"/>

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/fabActionMenu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="end|bottom"
        fab:menu_labels_ellipsize="end"
        fab:menu_labels_singleLine="true"
        fab:menu_fab_label="Cancel"
        fab:menu_backgroundColor="#ccffffff"
        fab:menu_animationDelayPerItem="0"
        fab:menu_colorNormal="#00C29F"
        fab:menu_colorPressed="#00C29F"
        fab:menu_colorRipple="#00C29F"
        android:padding="8dp">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fabSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_save_white_18dp"
            fab:fab_colorNormal="@color/primary_dark"
            fab:fab_colorPressed="@color/primary"
            fab:fab_size="mini"
            fab:fab_label="@string/SaveChanges"/>

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fabAddPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_lock_white_18dp"
            fab:fab_colorNormal="@color/primary"
            fab:fab_colorPressed="@color/primary_dark"
            fab:fab_size="mini"
            fab:fab_label="@string/LockWithPassword"/>

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fabDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_highlight_off_white_18dp"
            fab:fab_colorNormal="#871818"
            fab:fab_colorPressed="@color/accent"
            fab:fab_size="mini"
            fab:fab_label="@string/RemoveFromFavourites"/>

    </com.github.clans.fab.FloatingActionMenu>
</FrameLayout>
